--- a/curso-rn/app.json
+++ b/curso-rn/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "wallet-app",
-    "slug": "wallet-app",
+    "name": "curso-rn",
+    "slug": "curso-rn",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
